<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_item_label">edit_item</string>
    <string name="edit_item_below_label">Edit Item Below:</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="save_edit_item_label">Save</string>
    <string name="edit_item_priority_label">edit_item_priority</string>
    <string name="edit_prority">Edit Priority</string>
    <string name="edit_date">Date</string>
    <string name="edit_date_label">Edit Date</string>
    <string name="edit_priority_label">Edit Priority</string>

</resources>
