<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kemo.todoapp.EditItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item_below_label"
        android:id="@+id/edItemLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etItem"
        android:text="@string/edit_item_text"
        android:layout_below="@+id/edItemLabel"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_edit_item_label"
        android:onClick="onSubmit"
        android:id="@+id/btSave"
        android:layout_below="@+id/etPriority"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPriority"
        android:text="@string/edit_prority"
        android:layout_below="@+id/editPriorityLabel"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDate"
        android:text="@string/edit_date"
        android:layout_below="@+id/editDateLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_date_label"
        android:id="@+id/editDateLabel"
        android:layout_below="@+id/etItem"
        android:layout_alignEnd="@+id/btSave" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_priority_label"
        android:id="@+id/editPriorityLabel"
        android:layout_below="@+id/etDate"
        android:layout_alignParentStart="true" />

</RelativeLayout>
